export const snapshot = {};

snapshot[`Project Label Add Command - Help Text 1`] = `
stdout:
"
Usage: add <projectId> <label>

Description:

  Add a label to a project

Options:

  -h, --help  - Show this help.  
  -j, --json  - Output as JSON   

Examples:

  Add a project label linear project label add auth-redesign bug

"
stderr:
""
`;

snapshot[`Project Label Add Command - Adds Label 1`] = `
stdout:
'✓ Added label "Customer-facing" to auth-redesign
'
stderr:
""
`;

snapshot[`Project Label Add Command - JSON Output 1`] = `
stdout:
'{
  "changed": true,
  "project": {
    "id": "project-1",
    "name": "Auth Redesign",
    "slugId": "auth-redesign",
    "labels": [
      {
        "id": "plabel-1",
        "name": "Customer-facing"
      }
    ]
  },
  "label": {
    "id": "plabel-1",
    "name": "Customer-facing"
  },
  "receipt": {
    "operationId": "project.label.add",
    "resource": "project_label_binding",
    "action": "create",
    "resolvedRefs": {
      "projectSlugId": "auth-redesign",
      "labelName": "Customer-facing"
    },
    "appliedChanges": [
      "labels"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "continue"
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "project.label.add",
    "resource": "project_label_binding",
    "action": "create",
    "summary": "Added label Customer-facing on auth-redesign",
    "refs": {
      "projectSlugId": "auth-redesign",
      "labelName": "Customer-facing"
    },
    "changes": [
      "labels"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "continue"
  }
}
'
stderr:
""
`;

snapshot[`Project Label Add Command - Already Attached 1`] = `
stdout:
'Project already has label "Customer-facing"
'
stderr:
""
`;
